[package]
name = "nio-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nio_rust"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.16.6", features = ["extension-module", "anyhow"] }
pyo3-asyncio = { version = "0.16", features = ["attributes", "tokio-runtime"] }
pythonize = "0.16.0"
serde_json = "1"
tokio = "1.21.0"
thiserror = "1"


[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
rev = "831e802dd0e78722065bb6834503e7b26516bee7"
features = ["e2e-encryption", "sled"]
