[package]
name = "nio-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nio_rust"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.17.2", features = ["extension-module", "anyhow"] }
dict_derive = "0.4.0"
pyo3-asyncio = { version = "0.17", features = ["attributes", "tokio-runtime"] }
pythonize = "0.17.0"
serde_json = "1"
tokio = "1.21.2"
thiserror = "1"


[dependencies.matrix-sdk]
version = "0.6.2"
features = ["e2e-encryption", "sled"]
